Render product card

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -3,5 +3,6 @@
   "favorite": "Favorite",
   "contacts": "Contacts",
   "termsOfService": "Terms of service",
-  "headphones": "Headphones"
+  "headphones": "Headphones",
+  "buy": "Buy"
 }
