--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -3,5 +3,6 @@
   "favorite": "Избранное",
   "contacts": "Контакты",
   "termsOfService": "Условия сервиса",
-  "headphones": "Наушники"
+  "headphones": "Наушники",
+  "buy": "Купить"
 }
