Add new product Displaying second section with wireless headphones

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -4,5 +4,6 @@
   "contacts": "Contacts",
   "termsOfService": "Terms of service",
   "headphones": "Headphones",
-  "buy": "Buy"
+  "buy": "Buy",
+  "wirelessHeadphones": "Wireless headphones"
 }
