--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -4,5 +4,6 @@
   "contacts": "Контакты",
   "termsOfService": "Условия сервиса",
   "headphones": "Наушники",
-  "buy": "Купить"
+  "buy": "Купить",
+  "wirelessHeadphones": "Беспроводные наушники"
 }
