--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -5,5 +5,7 @@
   "termsOfService": "Terms of service",
   "headphones": "Headphones",
   "buy": "Buy",
-  "wirelessHeadphones": "Wireless headphones"
+  "wirelessHeadphones": "Wireless headphones",
+  "total": "Total",
+  "proceedToCheckout": "Proceed to checkout"
 }
