--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -5,5 +5,7 @@
   "termsOfService": "Условия сервиса",
   "headphones": "Наушники",
   "buy": "Купить",
-  "wirelessHeadphones": "Беспроводные наушники"
+  "wirelessHeadphones": "Беспроводные наушники",
+  "total": "Итого",
+  "proceedToCheckout": "Перейти к оформлению"
 }
