--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -9,5 +9,7 @@
   "total": "Total",
   "proceedToCheckout": "Proceed to checkout",
   "noProductsInTheCart": "There are no products in the cart",
-  "noFavoriteProducts": "No favorite products"
+  "noFavoriteProducts": "No favorite products",
+  "description": "Description",
+  "noDescription": "No description"
 }
