--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -2,7 +2,7 @@
   "cart": "Корзина",
   "favorite": "Избранное",
   "contacts": "Контакты",
-  "termsOfService": "Условия сервиса",
+  "termsService": "Условия сервиса",
   "headphones": "Наушники",
   "buy": "Купить",
   "wirelessHeadphones": "Беспроводные наушники",
@@ -13,5 +13,64 @@
   "description": "Описание",
   "noDescription": "Нет описания",
   "notFoundPage": "Такой страницы не существует",
-  "backToHome": "Вернуться на главную"
+  "backToHome": "Вернуться на главную",
+  "termsOfService": [
+    {
+      "title": "Общие положения",
+      "info": [
+        "Интернет-магазин QPICK (далее — «Магазин») предоставляет услуги по продаже электроники. Используя наш сайт, вы соглашаетесь с настоящими условиями сервиса. Мы оставляем за собой право вносить изменения в условия, публикуя обновленную версию на сайте."
+      ]
+    },
+    {
+      "title": "Оформление заказа и оплата",
+      "info": [
+        "Заказы принимаются через сайт или по телефону.",
+        "После оформления заказа вы получите подтверждение на указанный email или номер телефона.",
+        "Оплата может быть произведена онлайн с использованием банковских карт, электронных кошельков или через кассу при получении товара, если такая возможность предусмотрена."
+      ]
+    },
+    {
+      "title": "Доставка",
+      "info": [
+        "Мы осуществляем доставку по территории России.",
+        "Срок доставки зависит от вашего региона и выбранного способа доставки и, как правило, составляет от 2 до 7 рабочих дней.",
+        "Стоимость доставки рассчитывается индивидуально при оформлении заказа."
+      ]
+    },
+    {
+      "title": "Возврат и обмен товара",
+      "info": [
+        "Вы можете вернуть или обменять товар в течение 14 дней с момента получения, если он не был в употреблении и сохранил товарный вид.",
+        "Возврат денежных средств производится после проверки товара и в соответствии с действующим законодательством РФ."
+      ]
+    },
+    {
+      "title": "Гарантийное обслуживание",
+      "info": [
+        "На все товары предоставляется гарантия производителя.",
+        "В случае обнаружения заводского брака вы можете обратиться в авторизованный сервисный центр или воспользоваться правом на обмен товара."
+      ]
+    },
+    {
+      "title": "Защита персональных данных",
+      "info": [
+        "Мы собираем и обрабатываем ваши персональные данные в строгом соответствии с политикой конфиденциальности.",
+        "Ваши данные не передаются третьим лицам без вашего согласия, за исключением случаев, предусмотренных законом."
+      ]
+    },
+    {
+      "title": "Ответственность",
+      "info": [
+        "Магазин не несет ответственности за задержки доставки, вызванные форс-мажорными обстоятельствами или действиями транспортных компаний.",
+        "Мы не гарантируем абсолютную безошибочность информации, представленной на сайте, однако стремимся к ее максимально точному обновлению."
+      ]
+    },
+    {
+      "title": "Прочие условия",
+      "info": [
+        "При возникновении вопросов или спорных ситуаций вы можете обратиться в службу поддержки Магазина.",
+        "Использование сайта означает ваше согласие со всеми условиями настоящего соглашения."
+      ]
+    }
+  ]
 }
