--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -72,5 +72,14 @@
         "Использование сайта означает ваше согласие со всеми условиями настоящего соглашения."
       ]
     }
-  ]
+  ],
+  "phone": "Телефон",
+  "address": "Адрес",
+  "openingHours": "Часы работы",
+  "monday": "Понедельник",
+  "friday": "Пятница",
+  "saturday": "Суббота",
+  "sunday": "Воскресенье",
+  "dayOff": "Выходной",
+  "realAddress": "123456, Москва, ул. Полимерная, д. 10, офис 15"
 }
