--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -81,5 +81,32 @@
   "saturday": "Saturday",
   "sunday": "Sunday",
   "dayOff": "Day off",
-  "realAddress": "123456, Moscow, Polimernaya st., 10, office 15"
+  "realAddress": "123456, Moscow, Polimernaya st., 10, office 15",
+  "placingAnOrder": "Placing an order",
+  "enterYourName": "Enter your name",
+  "enterYourLastName": "Enter your last name",
+  "enterYourPhone": "Enter your phone",
+  "invalidPhoneFormat": "Invalid phone format",
+  "selectShippingMethod": "Select shipping method",
+  "enterYourShippingAddress": "Enter your shipping address",
+  "enterTheCardholdersName": "Enter the cardholder's name",
+  "enterCardNumber": "Enter card number",
+  "cardNumberMustContain16Digits": "The card number must contain 16 digits",
+  "enterTheCardExpirationDate": "Enter the card expiration date",
+  "invalidFormat(MM/YY)": "Invalid format (MM/YY)",
+  "enterCVV": "Enter CVV",
+  "cvvInvalid": "CVV must contain 3-4 digits",
+  "name": "Name",
+  "lastName": "Last name",
+  "shippingMethod": "Shipping method",
+  "delivery": "Delivery",
+  "pickUp": "Pickup",
+  "shippingAddress": "Shipping address",
+  "next": "Next",
+  "back": "Back",
+  "pay": "Pay",
+  "paymentByCard": "Payment by card",
+  "cardHolder": "Cardholder",
+  "cardNumber": "Card number",
+  "validityPeriodMMYY": "Validity period (MM/YY)"
 }
