--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -81,5 +81,32 @@
   "saturday": "Суббота",
   "sunday": "Воскресенье",
   "dayOff": "Выходной",
-  "realAddress": "123456, Москва, ул. Полимерная, д. 10, офис 15"
+  "realAddress": "123456, Москва, ул. Полимерная, д. 10, офис 15",
+  "placingAnOrder": "Оформление заказа",
+  "enterYourName": "Введите имя",
+  "enterYourLastName": "Введите фамилию",
+  "enterYourPhone": "Введите телефон",
+  "invalidPhoneFormat": "Неверный формат телефона",
+  "selectShippingMethod": "Выберите метод доставки",
+  "enterYourShippingAddress": "Введите адрес доставки",
+  "enterTheCardholdersName": "Введите имя владельца карты",
+  "enterCardNumber": "Введите номер карты",
+  "cardNumberMustContain16Digits": "Номер карты должен содержать 16 цифр",
+  "enterTheCardExpirationDate": "Введите срок действия карты",
+  "invalidFormat(MM/YY)": "Неверный формат (MM/YY)",
+  "enterCVV": "Введите CVV",
+  "cvvInvalid": "CVV должен содержать 3-4 цифры",
+  "name": "Имя",
+  "lastName": "Фамилия",
+  "shippingMethod": "Метод доставки",
+  "delivery": "Доставка",
+  "pickUp": "Самовывоз",
+  "shippingAddress": "Адрес доставки",
+  "next": "Далее",
+  "back": "Назад",
+  "pay": "Оплатить",
+  "paymentByCard": "Оплата картой",
+  "cardHolder": "Владелец карты",
+  "cardNumber": "Номер карты",
+  "validityPeriodMMYY": "Срок действия (MM/YY)"
 }
