Search product by name

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -108,5 +108,7 @@
   "paymentByCard": "Payment by card",
   "cardHolder": "Cardholder",
   "cardNumber": "Card number",
-  "validityPeriodMMYY": "Validity period (MM/YY)"
+  "validityPeriodMMYY": "Validity period (MM/YY)",
+  "nothingFound": "Nothing found",
+  "search": "Search"
 }
